src/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');



*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", serif;
}  /* ------ For all elements-----*/

.app{
  min-height: 100vh;
  display: grid;
  background:#071952 ;
  flex-grow: 1;

}

body, html {

  width: 100%;
  overflow-x: hidden;
}

@media screen and (max-width: 600px) {
  .app {
    padding: 10px;
  }

  .some-container {
    flex-direction: column; /* Make sure containers stack properly */
  }

  .text {
    font-size: 14px; /* Reduce text size for readability */
  }
}

